# owo-bot

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yaml  default.config.toml  update.sh
config/: default.autoresponder.toml  default.main.toml
migrations/2024-02-05-233306_users/: up.sql
src/: main.rs
src/database/: mod.rs  schema.rs
src/database/actions/: users.rs
src/database/models/: users.rs
src/discord/: mod.rs
src/discord/commands/: ban.rs  mod.rs  ping.rs
src/discord/event/: message.rs  mod.rs  ready.rs
src/discord/features/: autoresponder.rs  message_reply.rs  mod.rs  on_reload.rs
src/util/: config.rs  macros.rs  mod.rs
src/util/config/: mod.rs
src/util/config/schema/: autoresponder.rs  database.rs  discord.rs  mod.rs
