[package]
name = "owo-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bitflags = "2.4.2"
clap = { version = "4.4.18", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.1"
humantime = "2.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serenity = { version = "0.12", features = ["cache"] }
shellish_parse = "2.2.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.9"
