[package]
name = "owo-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#? general utils
anyhow = "1.0.79"                                                         #? EZ rust error management
bitflags = "2.4.2"                                                        #? self explanatory
dotenvy = "0.15.7"                                                        #? .env loader
env_logger = "0.11.1"                                                     #? the acutal logger
log = "0.4.20"                                                            #? log macros
lazy_static = "1.4.0"                                                     #? ez singletons
maplit = "1.0.2"                                                          #? macros for HashMap, HashSet... literals
regex = "1.10.3"                                                          #? Regex
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }  #? EZ async runtime

#? parsing
toml = "0.8.9"                                                            #? Toml parser
clap = { version = "4.4.18", features = ["derive"] }                      #? CLI arg parser
humantime = "2.1.0"                                                       #? Converting '2d' and '20 years' to Standart times
serde = { version = "1.0.196", features = ["derive"] }                    #? Data (De)serializer
shellish_parse = "2.2.0"                                                  #? Parser strings like its a shell command (so strings, escapes etc)

#? discord
serenity = { version = "0.12", features = ["cache", "gateway"] }          #? Discord api

#? db
diesel = { version = "2.1.0", features = ["postgres"] }                   #? Postgres ORM